# MindSearch

./: .env.example  .gitignore  pyproject.toml  requirements.txt  run_lmdeploy.py  run_ollama.py  sample_query.txt
dev/: run_searchagent.py  run_searxng.py  run_webbrowser.py  web_browser.py
mindsearch/agent/: mindsearch_agent.py  models.py
